--- a/src/Component/Diat/IndianDiat/DiatGain.module.css
+++ b/src/Component/Diat/IndianDiat/DiatGain.module.css
@@ -73,9 +73,12 @@
   justify-content: center;
   padding-left: calc(var(--borderS) + 2rem);
   position: relative;
+  border: 5px solid black;
+  border-radius: 20px;
+  background:radial-gradient(white,blue);
 }
 
-.circleListItem::before,
+/* .circleListItem::before,
 .circleListItem::after {
   inset: 0;
   position: absolute;
@@ -96,7 +99,7 @@
 .circleListItem::after {
   content: "";
   filter: drop-shadow(-0.25rem 0.25rem 0.0675rem rgba(0, 0, 0, 0.75)) blur(5px);
-}
+} */
 
 .circleListItem > * {
   width: 7.5rem;
