--- a/src/Component/Diat/IndianDiat/DiatLoss.module.css
+++ b/src/Component/Diat/IndianDiat/DiatLoss.module.css
@@ -80,9 +80,12 @@
     justify-content: center;
     padding-left: calc(var(--borderS) + 2rem);
     position: relative;
+    border: 5px solid black;
+    border-radius: 20px;
+    background:radial-gradient(white,blue);
   }
   
-  .circleListItem::before,
+  /* .circleListItem::before,
   .circleListItem::after {
     inset: 0;
     position: absolute;
@@ -103,7 +106,7 @@
   .circleListItem::after {
     content: "";
     filter: drop-shadow(-0.25rem 0.25rem 0.0675rem rgba(0, 0, 0, 0.75)) blur(5px);
-  }
+  } */
   
   .circleListItem > * {
     width: 7.5rem;
