--- a/src/Component/Diat/TamilnaduDiat/DiatGain.module.css
+++ b/src/Component/Diat/TamilnaduDiat/DiatGain.module.css
@@ -116,8 +116,8 @@
 }
 
 .imgbox{
-  background-image: url('../assets/image.jpg') !important;
-  background-color: #ae78cb;
+  background-image: url('https://www.nal.usda.gov/sites/default/files/styles/card/public/card-image/carbohydrates_foods%20-%20ricka_kinamoto.jpeg?h=51a72048&itok=0vmfDJn9') !important;
+  background-color: #ae78cb; 
 }
  
 
@@ -182,9 +182,12 @@
     justify-content: center;
     padding-left: calc(var(--borderS) + 2rem);
     position: relative;
+    border: 5px solid black;
+    border-radius: 20px;
+    background:radial-gradient(white,blue);
   }
-  
-  .circleListItem::before,
+ 
+  /* .circleListItem::before,
   .circleListItem::after {
     inset: 0;
     position: absolute;
@@ -192,8 +195,8 @@
     border: var(--borderS) solid var(--bgColor);
     line-height: 1.1;
   }
-  
-  .circleListItem::before {
+   */
+  /* .circleListItem::before {
     content: counter(stepnr);
     color: var(--accent-color);
     padding-left: 10rem;
@@ -205,7 +208,7 @@
   .circleListItem::after {
     content: "";
     filter: drop-shadow(-0.25rem 0.25rem 0.0675rem rgba(0, 0, 0, 0.75)) blur(5px);
-  }
+  } */
   
   .circleListItem > * {
     width: 7.5rem;
