--- a/src/Component/Diat/TamilnaduDiat/DiatLoss.module.css
+++ b/src/Component/Diat/TamilnaduDiat/DiatLoss.module.css
@@ -119,6 +119,7 @@
   background-image: url('../assets/image.jpg') !important;
   background-color: #ae78cb;
 }
+
  
 
 
@@ -135,7 +136,7 @@
   
 
   .circleList {
-    width: min(60rem, 90%);
+    /* width: min(60rem, 90%); */
     margin-inline: auto;
     display: flex;
     justify-content: center;
@@ -182,31 +183,34 @@
     justify-content: center;
     padding-left: calc(var(--borderS) + 2rem);
     position: relative;
+    border: 5px solid black;
+    border-radius: 20px;
+    background:radial-gradient(white,blue);
   }
   
-  .circleListItem::before,
+  /* .circleListItem::before,
   .circleListItem::after {
     inset: 0;
     position: absolute;
     border-radius: 50%;
     border: var(--borderS) solid var(--bgColor);
     line-height: 1.1;
-  }
+  } */
   
-  .circleListItem::before {
+  /* .circleListItem::before {
     content: counter(stepnr);
     color: var(--accent-color);
     padding-left: 10rem;
     font-size: 12rem;
     font-weight: 700;
     overflow: hidden;
-  }
+  } */
   
-  .circleListItem::after {
+  /* .circleListItem::after {
     content: "";
     filter: drop-shadow(-0.25rem 0.25rem 0.0675rem rgba(0, 0, 0, 0.75)) blur(5px);
   }
-  
+   */
   .circleListItem > * {
     width: 7.5rem;
   }
